# IncrementalVisualTracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: defaults.h  ivtracker.cpp  ivtracker.h  metrix.cpp  metrix.h  model_specific.cpp  model_specific.h  renderer.cpp  renderer.h  sklm.cpp  sklm.h  utils.cpp  utils.h
